fix align

--- a/styles/main.css
+++ b/styles/main.css
@@ -4887,6 +4887,16 @@ input[type=number] {
   .register__button--edit {
     width: calc(100%);
   }
+  .registerThirdPart {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
   .registerThirdPart p {
     width: 100%;
     margin: 0;
